// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="nav-bar-electron"
>
  <div
    className="nav-bar-inner"
  >
    <div
      className="brand"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="./img/logo-circle.svg"
        />
      </a>
    </div>
    <div
      className="nav-controls"
    >
      <div
        className="nav-controls"
      >
        <div
          className="back disabled"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="forward disabled"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="reload"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="address-bar"
    >
      <div
        className="address"
      >
        <div
          className="pre-add-on"
        >
          <svg
            height={16}
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          className="protocol"
        >
          ecency://
        </span>
        <div
          className="url"
        >
          <input
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="enter url or search query"
            spellCheck={false}
            type="text"
            value="hot"
          />
        </div>
      </div>
    </div>
    <div
      className="text-menu"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="switch-language"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          <div
            className="label"
          >
            EN
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="switch-theme"
      onClick={[Function]}
      title="Night Theme"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="login-required"
    >
      <button
        className="cursor-pointer rounded-full duration-300 no-wrap border-[1.5px] border-solid border-blue-dark-sky hover:border-blue-dark-sky-hover focus:border-blue-dark-sky-active text-blue-dark-sky hover:text-blue-dark-sky-hover focus:text-blue-dark-sky-active h-[2.125rem] px-3 "
        onClick={[Function]}
        style={
          Object {
            "outline": "none",
          }
        }
        type="button"
      >
        <div>
          Login
        </div>
      </button>
      <a
        className="btn btn-primary"
        href="/signup"
        onClick={[Function]}
      >
        Signup
      </a>
    </div>
    <div
      className="submit-post"
    >
      <a
        className="btn btn-outline-primary"
        href="/submit"
        onClick={[Function]}
        title="Create Post"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`(2) With updater 1`] = `
Array [
  <div
    className="nav-bar-electron"
  >
    <div
      className="nav-bar-inner"
    >
      <div
        className="brand"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          <img
            alt="Logo"
            className="logo"
            src="./img/logo-circle.svg"
          />
        </a>
      </div>
      <div
        className="nav-controls"
      >
        <div
          className="nav-controls"
        >
          <div
            className="back disabled"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            className="forward disabled"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            className="reload"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="address-bar"
      >
        <div
          className="address"
        >
          <div
            className="pre-add-on"
          >
            <svg
              height={16}
              viewBox="0 0 24 24"
              width={16}
            >
              <path
                d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <span
            className="protocol"
          >
            ecency://
          </span>
          <div
            className="url"
          >
            <input
              onChange={[Function]}
              onKeyUp={[Function]}
              placeholder="enter url or search query"
              spellCheck={false}
              type="text"
              value="hot"
            />
          </div>
        </div>
      </div>
      <div
        className="text-menu"
      >
        <div
          className="custom-dropdown float-right"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="switch-language"
      >
        <div
          className="custom-dropdown float-right"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              EN
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="switch-theme"
        onClick={[Function]}
        title="Night Theme"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className="login-required"
      >
        <button
          className="cursor-pointer rounded-full duration-300 no-wrap border-[1.5px] border-solid border-blue-dark-sky hover:border-blue-dark-sky-hover focus:border-blue-dark-sky-active text-blue-dark-sky hover:text-blue-dark-sky-hover focus:text-blue-dark-sky-active h-[2.125rem] px-3 "
          onClick={[Function]}
          style={
            Object {
              "outline": "none",
            }
          }
          type="button"
        >
          <div>
            Login
          </div>
        </button>
        <a
          className="btn btn-primary"
          href="/signup"
          onClick={[Function]}
        >
          Signup
        </a>
      </div>
      <div
        className="submit-post"
      >
        <a
          className="btn btn-outline-primary"
          href="/submit"
          onClick={[Function]}
          title="Create Post"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>,
  <div
    className="updater"
  >
    <p
      className="info-text"
    >
      New version is available
       
      <span
        className="release-name"
      >
        3.5.1
      </span>
    </p>
    <button
      className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 mr-[10px]"
      onClick={[Function]}
      style={
        Object {
          "outline": "none",
        }
      }
      type="button"
    >
      <div>
        Download
      </div>
    </button>
    <button
      className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 btn-dismiss"
      onClick={[Function]}
      style={
        Object {
          "outline": "none",
        }
      }
      type="button"
    >
      <div>
        Dismiss
      </div>
    </button>
  </div>,
]
`;

exports[`(3) Night Theme 1`] = `
<div
  className="nav-bar-electron"
>
  <div
    className="nav-bar-inner"
  >
    <div
      className="brand"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="./img/logo-circle.svg"
        />
      </a>
    </div>
    <div
      className="nav-controls"
    >
      <div
        className="nav-controls"
      >
        <div
          className="back disabled"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="forward disabled"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="reload"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="address-bar"
    >
      <div
        className="address"
      >
        <div
          className="pre-add-on"
        >
          <svg
            height={16}
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          className="protocol"
        >
          ecency://
        </span>
        <div
          className="url"
        >
          <input
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="enter url or search query"
            spellCheck={false}
            type="text"
            value="hot"
          />
        </div>
      </div>
    </div>
    <div
      className="text-menu"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="switch-language"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          <div
            className="label"
          >
            EN
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="switch-theme"
      onClick={[Function]}
      title="Day Theme"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="login-required"
    >
      <button
        className="cursor-pointer rounded-full duration-300 no-wrap border-[1.5px] border-solid border-blue-dark-sky hover:border-blue-dark-sky-hover focus:border-blue-dark-sky-active text-blue-dark-sky hover:text-blue-dark-sky-hover focus:text-blue-dark-sky-active h-[2.125rem] px-3 "
        onClick={[Function]}
        style={
          Object {
            "outline": "none",
          }
        }
        type="button"
      >
        <div>
          Login
        </div>
      </button>
      <a
        className="btn btn-primary"
        href="/signup"
        onClick={[Function]}
      >
        Signup
      </a>
    </div>
    <div
      className="submit-post"
    >
      <a
        className="btn btn-outline-primary"
        href="/submit"
        onClick={[Function]}
        title="Create Post"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`(4) With active user 1`] = `
<div
  className="nav-bar-electron"
>
  <div
    className="nav-bar-inner"
  >
    <div
      className="brand"
    >
      <a
        href="/hot"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="./img/logo-circle.svg"
        />
      </a>
    </div>
    <div
      className="nav-controls"
    >
      <div
        className="nav-controls"
      >
        <div
          className="back disabled"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="forward disabled"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="reload"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="address-bar"
    >
      <div
        className="address"
      >
        <div
          className="pre-add-on"
        >
          <svg
            height={16}
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          className="protocol"
        >
          ecency://
        </span>
        <div
          className="url"
        >
          <input
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="enter url or search query"
            spellCheck={false}
            type="text"
            value="hot"
          />
        </div>
      </div>
    </div>
    <div
      className="text-menu"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="switch-language"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          <div
            className="label"
          >
            EN
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="switch-theme"
      onClick={[Function]}
      title="Night Theme"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="submit-post"
    >
      <a
        className="btn btn-outline-primary"
        href="/submit"
        onClick={[Function]}
        title="Create Post"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <div
      className="user-nav"
    >
      <div
        className="user-points cursor-pointer"
        onClick={[Function]}
      >
        <svg
          height="16px"
          version="1.1"
          viewBox="0 0 512 512"
          width="16px"
        >
          <path
            d="M494.41,0.783 C490.167,0.972 412.085,4.973 340.075,42.863 L469.135,171.923 C507.025,99.913 511.026,21.831 511.215,17.588 L511.999,0 L494.41,0.783 Z"
            fill="currentColor"
          />
          <path
            d="M452.007,200.344 L311.654,59.992 C300.094,67.958 289.001,76.981 278.762,87.221 L222.827,143.156 L95.071,121.623 L2.84217094e-14,216.694 L127.757,238.227 L120.544,245.44 C104.756,261.227 97.327,282.83 99.624,306.271 C101.563,326.056 110.338,345.785 125.187,364.038 L244.128,245.097 L266.903,267.872 L147.961,386.812 C166.213,401.661 185.943,410.436 205.728,412.375 C208.52,412.649 211.284,412.785 214.017,412.785 C234.229,412.785 252.652,405.362 266.558,391.455 L273.77,384.243 L295.303,512 L390.374,416.929 L368.842,289.171 L424.777,233.236 C435.018,222.997 444.042,211.905 452.007,200.344 Z M351.08,202.692 C345.322,208.451 337.757,211.33 330.194,211.33 C322.63,211.33 315.065,208.45 309.308,202.692 C297.79,191.175 297.79,172.436 309.308,160.918 C320.825,149.4 339.565,149.4 351.082,160.918 C362.598,172.436 362.598,191.175 351.08,202.692 Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <a
        className="user-wallet"
        href="/@foo/wallet"
        onClick={[Function]}
        title="Wallet"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
            fill="currentColor"
          />
        </svg>
      </a>
      <span
        className="notifications"
        onClick={[Function]}
        title="Notifications"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
          />
        </svg>
      </span>
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="user-avatar medium"
          onClick={[Function]}
          style={
            Object {
              "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`(5) With active user && usePrivate = false 1`] = `
<div
  className="nav-bar-electron"
>
  <div
    className="nav-bar-inner"
  >
    <div
      className="brand"
    >
      <a
        href="/undefined"
        onClick={[Function]}
      >
        <img
          alt="Logo"
          className="logo"
          src="./img/logo-circle.svg"
        />
      </a>
    </div>
    <div
      className="nav-controls"
    >
      <div
        className="nav-controls"
      >
        <div
          className="back disabled"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="forward disabled"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          className="reload"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="address-bar"
    >
      <div
        className="address"
      >
        <div
          className="pre-add-on"
        >
          <svg
            height={16}
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          className="protocol"
        >
          ecency://
        </span>
        <div
          className="url"
        >
          <input
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="enter url or search query"
            spellCheck={false}
            type="text"
            value="hot"
          />
        </div>
      </div>
    </div>
    <div
      className="text-menu"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="switch-language"
    >
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          <div
            className="label"
          >
            EN
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="switch-theme"
      onClick={[Function]}
      title="Day Theme"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M12,18V6A6,6 0 0,1 18,12A6,6 0 0,1 12,18M20,15.31L23.31,12L20,8.69V4H15.31L12,0.69L8.69,4H4V8.69L0.69,12L4,15.31V20H8.69L12,23.31L15.31,20H20V15.31Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="submit-post"
    >
      <a
        className="btn btn-outline-primary"
        href="/submit"
        onClick={[Function]}
        title="Create Post"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <div
      className="user-nav"
    >
      <a
        className="user-wallet"
        href="/@foo/wallet"
        onClick={[Function]}
        title="Wallet"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        className="custom-dropdown float-right"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="user-avatar medium"
          onClick={[Function]}
          style={
            Object {
              "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
